# pp_klausur_manager

./: .gitignore  Cargo.toml  README.md  dummy.cfg  flake.nix  ip_addresses.txt  kanata.cfg
nix/: common.nix  config_client.nix  config_controlmachine.nix  ppmngr_cfg.json  test.nix
res/: ppmngr_cfg_default.json
src/: client.rs  input_parser.rs  kanata_tcp.rs  main.rs  nonclient_timeraccess.rs  persistance.rs  shared_data.rs  symlinks.rs  timing_webserver.rs  tui.rs
taskdescription_localtest/SRC/: index.html
taskdescription_localtest/TMP/: index.html
