[package]
name = "pp_klausur_manager"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tiny_http = "0.12.0"
